Improved templating in builder

--- a/src/config.js.TMPL
+++ b/src/config.js.TMPL
@@ -1,7 +1,7 @@
 define(['jquery', 'jq-cookie'], function($) {
     var result = {
-        host: /**HOST**/,
-        stackid: /**STACKID**/
+        host: "/**HOST**/",
+        stackid: "/**STACKID**/"
     };
 
     var readyCb = null, isReady = false;
